# advent-of-code

./: .gitignore  CMakeLists.txt  README.md
.reuse/: dep5
2023/1a/: main.c
2023/1b/: main.c
2023/2a/: main.c
2023/2b/: main.c
2024/1a/: main.c
2024/1b/: main.c
